Update manifest.json with correct GitHub information

--- a/nested-roleplay/manifest.json
+++ b/nested-roleplay/manifest.json
@@ -5,8 +5,8 @@
     "optional": [],
     "js": "index.js",
     "css": "style.css",
-    "author": "Your Name",
+    "author": "Dusky",
     "version": "1.0.0",
-    "homePage": "https://github.com/your/nested-roleplay",
+    "homePage": "https://github.com/Dusky/ST-NestedRP",
     "auto_update": true
 }
